# aqstat

./: .gitignore  LICENSE.md  README.md  pyproject.toml  setup.py  tox.ini
aqstat/: __init__.py  app.py  aqdata.py  metadata.py  parse.py  plot.py  stat.py  utils.py
aqstat/cli/: __init__.py  __main__.py  main.py
aqstat/cli/commands/: download.py  plot.py  stat.py  test.py
aqstat/locales/: README.md  aqstat.pot
aqstat/locales/hu/LC_MESSAGES/: aqstat.mo  aqstat.po
aqstat/scripts/: convert_csv_to_json.py  convert_google_form_csv_to_metadata_json.py  convert_luftdaten_csv_to_metadata_json.py
doc/examples/: commands.md  metadata.json
