[tool.poetry]
name = "aqstat"
version = "1.0.1"
description = "Toolset for visualizing Air Quality Data from https://sensor.community"
authors = ["Gabor Vasarhelyi <vasarhelyi@hal.elte.hu>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/vasarhelyi/aqstat"
keywords = ["air quality", "air pollution", "sensor.community", "luftdaten.info"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
click-option-group = "^0.5.2"
requests = "^2.25.1"
pandas = "2.0"
trio = "^0.18.0"
asks = "^2.4.12"
matplotlib = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
aqstat = "aqstat.cli.main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
